--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # API Keys - Copy this file to .env.local and add your actual keys
 
 # Gemini API Key (required for main AI features)
+# For local development:
 GEMINI_API_KEY=your_gemini_api_key_here
+# For Netlify/production (use this in Netlify dashboard):
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Groq API Key (optional fallback for Llama models)
 VITE_GROQ_FALLBACK_API_KEY=your_groq_api_key_here
